<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioDetalle">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/textview34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UDname"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="96dp"
        android:text="@string/textview35"
        app:layout_constraintStart_toEndOf="@+id/UDname"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UDsurname"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintStart_toEndOf="@+id/UDname"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UDname" />

    <TextView
        android:id="@+id/UDphone"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview37"
        app:layout_constraintStart_toEndOf="@+id/UDphone"
        app:layout_constraintTop_toBottomOf="@+id/UDsurname" />

    <TextView
        android:id="@+id/UDage"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintStart_toEndOf="@+id/UDphone"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UDphone" />

    <TextView
        android:id="@+id/UDemail"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview38"
        app:layout_constraintStart_toEndOf="@+id/UDemail"
        app:layout_constraintTop_toBottomOf="@+id/UDage" />

    <TextView
        android:id="@+id/UDpoblation"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintStart_toEndOf="@+id/UDemail"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UDemail" />

    <TextView
        android:id="@+id/UDusername"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <Button
        android:id="@+id/button28_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="68dp"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30_47" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview46"
        app:layout_constraintStart_toEndOf="@+id/UDusername"
        app:layout_constraintTop_toBottomOf="@+id/UDpoblation" />

    <TextView
        android:id="@+id/textView30_47"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintStart_toEndOf="@+id/UDusername"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="68dp"
        android:text="@string/button9"
        app:layout_constraintStart_toEndOf="@+id/button28_3"
        app:layout_constraintTop_toBottomOf="@+id/textView30_47" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LogOut"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="528dp" />
</androidx.constraintlayout.widget.ConstraintLayout>